Fix to stretch the text area to full height

--- a/docs/base.css
+++ b/docs/base.css
@@ -1,5 +1,6 @@
 html {
   display: flex;
+  height: 100%;
 }
 
 body {
